# ayatana-indicator-network

./: CMakeLists.txt
doc/qt/cpp/: CMakeLists.txt
